[package]
name = "tcp_to_zero_broadcast"
version = "0.1.0"
authors = ["Luca Pinelli <pinelli.luca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
config = "0.10"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["full"] }
zmq = "0.9"
